<resources>
    <string name="app_name">FitTrack</string>
    <string name="tittleLogin">Login</string>
    <string name="tittleRegister">Register</string>
    <string name="tittleProfile">Profile</string>
    <string name="tittleTrainer">Trainer</string>
    <string name="user">User: </string>
    <string name="password">Password: </string>
    <string name="name">Name: </string>
    <string name="surname">Surname: </string>
    <string name="email">Email: </string>
    <string name="birthdate">Birthdate: </string>
    <string name="tittleWorkouts">Workouts</string>
    <string name="levelUser">Level: </string>
    <string name="rememberMe">Remember me</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonReportFit">Report Fit</string>
    <string name="buttonRegister">Sign in</string>
    <string name="buttonBack">Back</string>
    <string name="buttonFilter">Filter</string>
    <string name="buttonProfile">Profile</string>
    <string name="buttonReproduce">Reproduce</string>
    <string name="buttonAdd">Add</string>
    <string name="buttonEliminate">Eliminate</string>
    <string name="buttonUpdate">Update</string>
    <string name="filter">Type for filter</string>
    <string name="workout">Workout</string>
    <string name="level">Level: </string>
    <string name="exercises">Exercises: </string>
    <string name="video">Video: </string>
    <string-array name="userType">
        <item>User</item>
        <item>Trainer</item>
    </string-array>
    <string-array name="changeLanguage">
        <item>English</item>
        <item>Spanish</item>
    </string-array>
</resources>