<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoregister"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="23dp">

    <EditText
        android:id="@+id/nameWorkoutAdd"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:hint="@string/name"
        android:inputType="text"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="#FFFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/levelWorkoutAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <EditText
        android:id="@+id/levelWorkoutAdd"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:hint="@string/level"
        android:inputType="number"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="#FFFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/exercisesWorkoutAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameWorkoutAdd" />

    <EditText
        android:id="@+id/exercisesWorkoutAdd"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:autofillHints="username"
        android:hint="@string/exercises"
        android:inputType="number"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="#FFFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/urlWorkoutAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelWorkoutAdd" />

    <EditText
        android:id="@+id/urlWorkoutAdd"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:autofillHints="surname"
        android:hint="@string/video"
        android:inputType="textUri"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="#FFFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercisesWorkoutAdd" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#716969"
        android:text="@string/buttonAdd"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.197" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#716969"
        android:text="@string/buttonBack"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.197" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="159dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_begin="758dp" />


</androidx.constraintlayout.widget.ConstraintLayout>